added basic ImGui

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,31 @@ target_include_directories(
   external/glad/include
 )
 
+include (FetchContent)
+
+# ImGui
+message(STATUS "Fetching ImGui library")
+FetchContent_Declare(
+  imgui
+  GIT_REPOSITORY https://github.com/ocornut/imgui.git
+  GIT_TAG v1.92.0
+)
+FetchContent_MakeAvailable(imgui)
+add_library(imgui STATIC
+  ${imgui_SOURCE_DIR}/imgui.cpp
+  ${imgui_SOURCE_DIR}/imgui_draw.cpp
+  ${imgui_SOURCE_DIR}/imgui_tables.cpp
+  ${imgui_SOURCE_DIR}/imgui_widgets.cpp
+  ${imgui_SOURCE_DIR}/imgui_demo.cpp
+  ${imgui_SOURCE_DIR}/backends/imgui_impl_glfw.cpp
+  ${imgui_SOURCE_DIR}/backends/imgui_impl_opengl3.cpp
+)
+target_include_directories(imgui PUBLIC
+  ${imgui_SOURCE_DIR}
+  ${imgui_SOURCE_DIR}/backends
+)
+target_link_libraries(imgui PUBLIC glfw)
+
 project(PlanetGenerator LANGUAGES C CXX)
 
 file(GLOB_RECURSE PROJECT_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/source/*.cpp")
@@ -54,6 +79,7 @@ target_link_libraries( PlanetGenerator
     glm::glm
     glfw
     OpenGL::GL
+    imgui
 )
 
 set(SHADERS_FOLDER "${CMAKE_SOURCE_DIR}/shader/graphics")
